# Bank-system

./: .gitignore  CMakeLists.txt  main  main.cpp
core/: Account.cpp  Account.h  AccountType.h  ContactInformation.h  Customer.cpp  Customer.h  CustomerType.h  IObserverLoan.h  ISubjectLoan.h  LoanStatusType.h  Loans.cpp  Loans.h  ObserverCustomer.cpp  ObserverCustomer.h  OperationType.h  RejectedLoanInfo.h  Transaction.h
core/errors/: AccountError.h  ContractInformationError.h  CustomerError.h  IdGenerationError.h  LoanError.h  TransactionError.h
include/core/: Account.h  AccountType.h  Customer.h  LoanStatusType.h  Loans.h  Transaction.h  UserSesion.h
include/core/errors/: AccountError.h  BankError.h  LoanError.h  (+3 more)
include/services/: BankSystem.h  CreditSnapshot.h  CreditSnepshotServices.h  IbamGeneretion.h  IdGeneration.h
include/ui/: BankSystemMenu.h
includes/: PCH.h
services/: BankSystem.cpp  BankSystem.h  CreditSnepshotServices.cpp  CreditSnepshotServices.h  CustomerPrifele.h  IbamGeneretion.h  IdGeneration.cpp  Transaction.cpp
src/: main.cpp
src/core/: Account.cpp  Customer.cpp  Loans.cpp
src/services/: BankSystem.cpp  CreditSnepshotServices.cpp  IdGeneration.cpp  Transaction.cpp
src/ui/: BankSystemMenu.cpp
src/utils/: ConsoleHelper.cpp
ui/: BankSystemMenu  BankSystemMenu.cpp  BankSystemMenu.h
ui/Report/: Report.cpp  Report.h  ReportAccountStatus.cpp  ReportAccountStatus.h  ReportTransaction.cpp  ReportTransaction.h  StructReport.h
ui/formatters/: AccountTypeToString.h  OperationTypeToString.h
utils/: ConsoleHelper.cpp  ConsoleHelper.h
(+9 files in other folders)
